trying to query api with user input

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Indie+Flower">
       <link href='style.css' rel='stylesheet'>
       <script src="https://apis.google.com/js/client.js?onload=load"></script>
-      <script src="src/main.js"></script>
+      <script src="src/pollingPlace.js"></script>
+      <!-- <script src="src/candidateInfo.js"></script> -->
     </head>
     <body>
       <section>
