--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
       <script src="https://apis.google.com/js/client.js?onload=load"></script>
       <script src="src/pollingPlace.js"></script>
     </head>
-    <header class='logoBar'></header>
+    <header class='logoBar'>
+      <h1>Voter Information Application</h1>
+      <img class='alexAvatar' src="img/d07d536e1155810aaac4db9024a539d5--gif-collection-motion-graphics.jpg" alt="alexBritcliffeAvatar" height="42" width="42">
+    </header>
     <body>
       <section class='container'>
       <input id="address" value="Enter Address Here">
@@ -17,8 +20,12 @@
       <button class='buttonTwo' onclick="searchOffices()">Click me for local candidates!</button>
     </section>
     <section class='resultsContainer'>
-      <div id="results"></div>
-      <div id=resultsTwo></div>
+      <div id="results">
+        <img class=mapIcon src="img/download.png" alt="mapIcon" height="42" width="42">
+      </div>
+      <div id=resultsTwo>
+        <img class=politicianIcon src="img/public-speaking-icon-person-politician-business-speaker-microphones-vector-illustration-46200806.jpg" alt="politicianIcon" height="42" width="42">
+      </div>
     </sections>
     </body>
   </html>
