added scroll feature for mobile size

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Indie+Flower">
       <link href='style.css' rel='stylesheet'>
       <script src="https://apis.google.com/js/client.js?onload=load"></script>
-      <script src="src/pollingPlace.js"></script>
+      <script src="src/main.js"></script>
     </head>
     <header class='logoBar'>
       <h1>Voter Information Application</h1>
@@ -16,8 +16,8 @@
     <body>
       <section class='container'>
       <input id="address" value="Enter Address Here">
-      <button class='buttonOne' onclick="searchAddress()">Click me for voting location!</button>
-      <button class='buttonTwo' onclick="searchOffices()">Click me for local candidates!</button>
+      <button class='buttonOne' onclick="searchAddress()">Click here for voting location!</button>
+      <button class='buttonTwo' onclick="searchOffices()">Click here for local Senator and Congressman!</button>
     </section>
     <section class='resultsContainer'>
       <div id="results">
