--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Indie+Flower">
       <link href='style.css' rel='stylesheet'>
       <script src="https://apis.google.com/js/client.js?onload=load"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
       <script src="src/main.js"></script>
     </head>
     <header class='logoBar'>
