added delete buttons

--- a/index.html
+++ b/index.html
@@ -28,5 +28,9 @@
           <img class=politicianIcon src="img/public-speaking-icon-person-politician-business-speaker-microphones-vector-illustration-46200806.jpg" alt="politicianIcon" height="42" width="42">
         </div>
     </sections>
+    <section class='deleteButtons'>
+        <button class='buttonThree' onclick="deleteLocationData()">Click Here to Voting Location!</button>
+        <button class='buttonFour' onclick="deleteCandidateData()">Click Here to Delete Candidate!</button>
+    </section>
     </body>
   </html>
