--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
     </sections>
     <section class='deleteButtons'>
-        <button class='buttonThree' onclick="deleteLocationData()">Click Here to Voting Location!</button>
+        <button class='buttonThree' onclick="deleteLocationData()">Click Here to Delete Voting Location!</button>
         <button class='buttonFour' onclick="deleteCandidateData()">Click Here to Delete Candidate!</button>
     </section>
     </body>
