--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </sections>
     <section class='deleteButtons'>
         <button class='buttonThree' onclick="deleteLocationData()">Click Here to Delete Voting Location!</button>
-        <button class='buttonFour' onclick="deleteCandidateData()">Click Here to Delete Candidate!</button>
+        <button class='buttonFour' onclick="deleteCandidateData()">Click Here to Delete Politicians!</button>
     </section>
     </body>
   </html>
